--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -39,67 +39,66 @@
 		text-shadow: 2px 2px 3px #17A57D;
 	}
 
+	
 .navbar-default {
-	background-color: #87b822;
-	border-color: #7ea32f;
+  background-color: #87b822;
+  border-color: #87b822;
 }
 .navbar-default .navbar-brand {
-	color: #eff2df;
+  color: #d4dca8;
 }
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
-	color: #eff2df;
+  color: #ffffff;
 }
 .navbar-default .navbar-text {
-	color: #eff2df;
+  color: #d4dca8;
 }
 .navbar-default .navbar-nav > li > a {
-	color: #eff2df;
+  color: #d4dca8;
 }
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-	color: #eff2df;
+  color: #ffffff;
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-	color: #eff2df;
-	background-color: #7ea32f;
-	box-shadow: inset 0px 5px 20px -15px #536b20;
+  color: #ffffff;
+  background-color: #87b822;
 }
 .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-	color: #eff2df;
-	background-color: #7ea32f;
+  color: #ffffff;
+  background-color: #87b822;
 }
 .navbar-default .navbar-toggle {
-	border-color: #7ea32f;
+  border-color: #87b822;
 }
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-	background-color: #7ea32f;
+  background-color: #87b822;
 }
 .navbar-default .navbar-toggle .icon-bar {
-	background-color: #eff2df;
+  background-color: #d4dca8;
 }
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
-	border-color: #eff2df;
+  border-color: #d4dca8;
 }
 .navbar-default .navbar-link {
-	color: #eff2df;
+  color: #d4dca8;
 }
 .navbar-default .navbar-link:hover {
-	color: #eff2df;
+  color: #ffffff;
 }
 
-@media (min-width: 800px) and (max-width: 1000px) {
-	.navbar-default .navbar-nav .open .dropdown-menu > li > a {
-		color: #eff2df;
-	}
-	.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-		color: #eff2df;
-	}
-	.navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-		color: #eff2df;
-		background-color: #7ea32f;
-	}
+@media (max-width: 767px) {
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+    color: #d4dca8;
+  }
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
+    color: #ffffff;
+  }
+  .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
+    color: #ffffff;
+    background-color: #87b822;
+  }
 }
-
 	/* Responsive embed CSS for Google Maps */
 /*    .google-maps {
         position: relative;
@@ -161,20 +160,30 @@
 			</div>
 
 			<div class="collapse navbar-collapse">
-				<ul class="nav navbar-nav">
-					<li> <a href="/" > <span class="glyphicon glyphicon-home"></span>  Home </a></li>
-					<li class="active"> <a href="foodfinder" > <span class="glyphicon glyphicon-cutlery"></span> Food Finder </a></li>
-				</ul>
+				<!-- <ul class="nav navbar-nav">
+					<li> <a href="/" > <span class="glyphicon glyphicon-home"></span>  HOME </a></li>
+					<li class="active"> <a href="foodfinder" > <span class="glyphicon glyphicon-cutlery"></span> FOOD FINDER </a></li>
+				</ul> -->
 				
 				<!-- <form class="navbar-form navbar-left" role="search">
         			<div class="form-group">
           				<input type="text" class="form-control" placeholder="Search">
         			</div>
       			</form> -->
+<!-- 
+				<ul class="nav navbar-nav navbar-right">
+					<li> <a href="/" > <span class="glyphicon glyphicon-home"></span>  HOME </a></li>
+					<li class="active"> <a href="foodfinder" > <span class="glyphicon glyphicon-cutlery"></span> FOOD FINDER </a></li>
+					<li> <a href="messages"><span class="glyphicon glyphicon-envelope"></span> MESSAGES </a></li>
+					<li> <a href="profile" ><span class="glyphicon glyphicon-user"></span> PROFILE </a></li>
+					<li> <a href="" > Log Out </a></li>
+				</ul> -->
 
 				<ul class="nav navbar-nav navbar-right">
-					<li> <a href="messages"><span class="glyphicon glyphicon-envelope"></span> Messages </a></li>
-					<li> <a href="profile" ><span class="glyphicon glyphicon-user"></span> Profile </a></li>
+					<li> <a href="/" > Home </a></li>
+					<li class="active"> <a href="foodfinder" > Food Finder </a></li>
+					<li> <a href="messages"> Messages </a></li>
+					<li> <a href="profile" >Profile </a></li>
 					<li> <a href="" > Log Out </a></li>
 				</ul>
 			</div>
