--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -119,7 +119,7 @@
 
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li> <a href="" > Log In </a></li>
+					<li> <a href="index" > Log In </a></li>
 				</ul>
 				<form class="navbar-form navbar-right" role="search">
         			<div class="form-group">
