--- a/views/messages.handlebars
+++ b/views/messages.handlebars
@@ -207,11 +207,11 @@
 				</ul> -->
 
 				<ul class="nav navbar-nav navbar-right">
-					<li > <a href="/" > Home </a></li>
+					<li > <a href="index" > Home </a></li>
 					<li > <a href="foodfinder" > Food Finder </a></li>
 					<li class="active"> <a href="messages"> Messages </a></li>
 					<li> <a href="profile" >Profile </a></li>
-					<li> <a href="" > Log Out </a></li>
+					<li> <a href="/" > Log Out </a></li>
 				</ul>
 			</div>
 		</div>
