--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -205,11 +205,11 @@
 				</ul>
  -->
 				<ul class="nav navbar-nav navbar-right">
-					<li > <a href="/" > Home </a></li>
+					<li > <a href="index" > Home </a></li>
 					<li > <a href="foodfinder" > Food Finder </a></li>
 					<li > <a href="messages"> Messages </a></li>
 					<li class="active"> <a href="profile" >Profile </a></li>
-					<li> <a href="" > Log Out </a></li>
+					<li> <a href="/" > Log Out </a></li>
 				</ul>
 			</div>
 		</div>
