Edit landing page information

--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -139,8 +139,10 @@
 
 	<div class="container">
 		<div class="jumbotron">
-			<h1>Welcome to nuTriton!</h1>
-			<p>This is the one-stop place to find the foods suitable for your diet. To proceed, please log in or register.</p>
+			<h1>nuTriton</h1>
+			<br/>
+			<p>The one-stop place to find the foods suitable for your diet.</p>
+			<p> Connect with others of the same dietary restrictions, share what's new in your life.</p>
 		</div> 	
 	</div>
 
