change toggle to slideToggle for smooth transition

--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -370,15 +370,15 @@
 	<script type="text/javascript">
 	
 	$("#canyon-vista-toggle").click(function(){
-		$(".canyon-vista").toggle();
+		$(".canyon-vista").slideToggle();
 	});
 
 	$("#pines-toggle").click(function(){
-		$(".pines").toggle();
+		$(".pines").slideToggle();
 	});
 
 	$("#roots-toggle").click(function(){
-		$(".roots").toggle();
+		$(".roots").slideToggle();
 	});
 
 		function showMap() {
