--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -150,7 +150,7 @@
 	<div class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header"> 
-				<a href="" class="navbar-brand">nuTriton </a> 
+				<a href="index" class="navbar-brand">nuTriton </a> 
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
@@ -262,8 +262,8 @@
 		        		<h4>
 		    			{{name}}  ({{type}})
 		    			<br/>
-		    			<button type="button" class="btn btn-default btn-sm upvote"><span class="glyphicon glyphicon-triangle-top"></span> {{upvotes}}</button>
-		    			<button type="button" class="btn btn-default btn-sm downvote"><span class="glyphicon glyphicon-triangle-bottom"></span> {{downvotes}}</button>
+		    			<button type="button" class="btn btn-default btn-sm upvote"><span class="glyphicon glyphicon-thumbs-up"></span> {{upvotes}}</button>
+		    			<button type="button" class="btn btn-default btn-sm downvote"><span class="glyphicon glyphicon-thumbs-down"></span> {{downvotes}}</button>
 		    			</h4>
 		    		</div>
 		    		{{/each}}
@@ -297,8 +297,8 @@
 		        		<h4>
 		    			{{name}}  ({{type}})
 		    			<br/>
-		    			<button type="button" class="btn btn-default btn-sm upvote"><span class="glyphicon glyphicon-triangle-top"></span> {{upvotes}}</button>
-		    			<button type="button" class="btn btn-default btn-sm downvote"><span class="glyphicon glyphicon-triangle-bottom"></span> {{downvotes}}</button>
+		    			<button type="button" class="btn btn-default btn-sm upvote"><span class="glyphicon glyphicon-thumbs-up"></span> {{upvotes}}</button>
+		    			<button type="button" class="btn btn-default btn-sm downvote"><span class="glyphicon glyphicon-thumbs-down"></span> {{downvotes}}</button>
 		    			</h4>
 		    		</div>
 		    		{{/each}}
@@ -331,8 +331,8 @@
 		        		<h4>
 		    			{{name}}  ({{type}})
 		    			<br/>
-		    			<button type="button" class="btn btn-default btn-sm upvote"><span class="glyphicon glyphicon-triangle-top"></span> {{upvotes}}</button>
-		    			<button type="button" class="btn btn-default btn-sm downvote"><span class="glyphicon glyphicon-triangle-bottom"></span> {{downvotes}}</button>
+		    			<button type="button" class="btn btn-default btn-sm upvote"><span class="glyphicon glyphicon-thumbs-up"></span> {{upvotes}}</button>
+		    			<button type="button" class="btn btn-default btn-sm downvote"><span class="glyphicon glyphicon-thumbs-down"></span> {{downvotes}}</button>
 		    			</h4>
 		    		</div>
 		    		{{/each}}
