--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -252,36 +252,7 @@
 		
 		<div class="panel panel-default ">
   			<div class="panel-body">
-  				<h3 id="canyon-vista-toggle">Canyon Vista <span class="glyphicon glyphicon-chevron-down"></span></h3>
-
-	  			<div class="canyon-vista" style="display:none;">
-	  				<br/>
-
-		  			{{#each canyonData.canyonvistaposts}}
-		 			<div class="canyonvistaposts">
-		        		<h4>
-		    			{{name}}  ({{type}})
-		    			<br/>
-		    			<button type="button" class="btn btn-default btn-sm upvote"><span class="glyphicon glyphicon-thumbs-up"></span> {{upvotes}}</button>
-		    			<button type="button" class="btn btn-default btn-sm downvote"><span class="glyphicon glyphicon-thumbs-down"></span> {{downvotes}}</button>
-		    			</h4>
-		    		</div>
-		    		{{/each}}
-		    		<br/>
-
-				    <form id="addCanyonVistaForm" role="form" method="get" action="/addcanyonvista">
-					    <h4><strong>Add Menu</strong></h4>
-					    <div class="form-group form-inline">
-					      	<label for="name">Name:</label>
-					      	<input type="text" class="form-control" id="name" placeholder="e.g. fish" name="name">
-					    </div>
-					    <div class="form-group form-inline">
-					    <label for="type">Type:</label>
-					     	<input type="text" class="form-control" id="type" placeholder="e.g. Gluten-free" name="type">
-					    </div>
-					    <input type="submit" id="submitBtn" class="btn btn-default" value="Post"></input>
-					</form>
-	    		</div>
+  				<h3><a href="canyonvista">Canyon Vista </a></h3>
   			</div>
 		</div>
 
