Add individual page for Pines

--- a/views/pines.handlebars
+++ b/views/pines.handlebars
@@ -164,10 +164,10 @@
 	<div class="container">
 		<div class="panel panel-default ">
   			<div class="panel-body">
-  				<h3>Canyon Vista </h3>
+  				<h3>Pines</h3>
 	  				<br/>
-		  			{{#each canyonData.canyonvistaposts}}
-		 			<div class="canyonvistaposts">
+		  			{{#each pinesData.pinesposts}}
+		 			<div class="pinesposts">
 		        		<h4>
 		    			{{name}}  ({{type}})
 		    			<br/>
@@ -178,7 +178,7 @@
 		    		{{/each}}
 		    		<br/>
 
-				    <form id="addCanyonVistaForm" role="form" method="get" action="/addcanyonvista">
+				    <form id="addPinesForm" role="form" method="get" action="/addpines">
 					    <h4><strong>Add Menu</strong></h4>
 					    <div class="form-group form-inline">
 					      	<label for="name">Name:</label>
