--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -258,36 +258,7 @@
 
 		<div class="panel panel-default ">
 			<div class="panel-body">
-  				<h3 id="pines-toggle">Pines <span class="glyphicon glyphicon-chevron-down"></span></h3>
-
-	  			<div class="pines" style="display:none;">
-	  				<br/>
-
-		  			{{#each pinesData.pinesposts}}
-		 			<div class="pinesposts">
-		        		<h4>
-		    			{{name}}  ({{type}})
-		    			<br/>
-		    			<button type="button" class="btn btn-default btn-sm upvote"><span class="glyphicon glyphicon-thumbs-up"></span> {{upvotes}}</button>
-		    			<button type="button" class="btn btn-default btn-sm downvote"><span class="glyphicon glyphicon-thumbs-down"></span> {{downvotes}}</button>
-		    			</h4>
-		    		</div>
-		    		{{/each}}
-		    		<br/>
-
-				    <form id="addPinesForm" role="form" method="get" action="/addpines">
-					    <h4><strong>Add Menu</strong></h4>
-					    <div class="form-group form-inline">
-					      	<label for="name">Name:</label>
-					      	<input type="text" class="form-control" id="name" placeholder="e.g. fish" name="name">
-					    </div>
-					    <div class="form-group form-inline">
-					    <label for="type">Type:</label>
-					     	<input type="text" class="form-control" id="type" placeholder="e.g. Gluten-free" name="type">
-					    </div>
-					    <input type="submit" id="submitBtn" class="btn btn-default" value="Post"></input>
-					</form>
-	    		</div>
+  				<h3><a href="pines">Pines</a></h3>
   			</div>
   		</div>
 
