--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -262,8 +262,8 @@
 		        		<h4>
 		    			{{name}}  ({{type}})
 		    			<br/>
-		    			<button type="button" class="btn btn-default btn-sm upvote"><span class="glyphicon glyphicon-triangle-top"></span> {{upvotes}}</button>
-		    			<button type="button" class="btn btn-default btn-sm downvote"><span class="glyphicon glyphicon-triangle-bottom"></span> {{downvotes}}</button>
+		    			<button type="button" class="btn btn-default btn-sm upvote"><span class="glyphicon glyphicon-thumbs-up"></span> {{upvotes}}</button>
+		    			<button type="button" class="btn btn-default btn-sm downvote"><span class="glyphicon glyphicon-thumbs-down"></span> {{downvotes}}</button>
 		    			</h4>
 		    		</div>
 		    		{{/each}}
@@ -297,8 +297,8 @@
 		        		<h4>
 		    			{{name}}  ({{type}})
 		    			<br/>
-		    			<button type="button" class="btn btn-default btn-sm upvote"><span class="glyphicon glyphicon-triangle-top"></span> {{upvotes}}</button>
-		    			<button type="button" class="btn btn-default btn-sm downvote"><span class="glyphicon glyphicon-triangle-bottom"></span> {{downvotes}}</button>
+		    			<button type="button" class="btn btn-default btn-sm upvote"><span class="glyphicon glyphicon-thumbs-up"></span> {{upvotes}}</button>
+		    			<button type="button" class="btn btn-default btn-sm downvote"><span class="glyphicon glyphicon-thumbs-down"></span> {{downvotes}}</button>
 		    			</h4>
 		    		</div>
 		    		{{/each}}
@@ -331,8 +331,8 @@
 		        		<h4>
 		    			{{name}}  ({{type}})
 		    			<br/>
-		    			<button type="button" class="btn btn-default btn-sm upvote"><span class="glyphicon glyphicon-triangle-top"></span> {{upvotes}}</button>
-		    			<button type="button" class="btn btn-default btn-sm downvote"><span class="glyphicon glyphicon-triangle-bottom"></span> {{downvotes}}</button>
+		    			<button type="button" class="btn btn-default btn-sm upvote"><span class="glyphicon glyphicon-thumbs-up"></span> {{upvotes}}</button>
+		    			<button type="button" class="btn btn-default btn-sm downvote"><span class="glyphicon glyphicon-thumbs-down"></span> {{downvotes}}</button>
 		    			</h4>
 		    		</div>
 		    		{{/each}}
@@ -355,8 +355,7 @@
   		</div>
 	</div>
 
-	<!-- Include Google Maps API -->
-	<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -367,37 +366,22 @@
 	<script src="js/lightbox.min.js"></script>
 	<script src="js/nutriton.js"></script>
 
-	<script type="text/javascript">
-	
-	$("#canyon-vista-toggle").click(function(){
-		$(".canyon-vista").slideToggle();
-	});
-
-	$("#pines-toggle").click(function(){
-		$(".pines").slideToggle();
-	});
-
-	$("#roots-toggle").click(function(){
-		$(".roots").slideToggle();
-	});
-
+	<!-- Include Google Maps API -->
+	<script src="http://maps.google.com/maps/api/js?sensor=false"></script>  <!-- js?v=3.exp&signed_in=true"></script> --> <!-- js?sensor=false"></script> -->
+	<script>
 		function showMap() {
-		 
+		 	
+		 	var map;
 			//If HTML5 Geolocation Is Supported In This Browser
-		    if (navigator.geolocation) {
-				    
+		    if (navigator.geolocation) {				    
 			    //Use HTML5 Geolocation API To Get Current Position
-		        navigator.geolocation.getCurrentPosition(function(position){
-			        
+		        navigator.geolocation.getCurrentPosition(function(position){		       
 			        //Get Latitude From Geolocation API
-			        var latitude = position.coords.latitude;
-			        
+			        var latitude = position.coords.latitude;			        
 			        //Get Longitude From Geolocation API
-			        var longitude = position.coords.longitude;
-			        
+			        var longitude = position.coords.longitude;			        
 			        //Define New Google Map With Lat / Lon
-			        var coords = new google.maps.LatLng(latitude, longitude);
-			        
+			        var coords = new google.maps.LatLng(latitude, longitude);			     
 			        //Specify Google Map Options
 			        var mapOptions = {
 			            zoom: 15,
@@ -410,12 +394,49 @@
 			                map: map,
 			                title: "You Are Here!"
 			    		});
+			    		setMarkers(map, locationUCSD);
+			    		//marker.setIcon('newImage.png');
 					}
 				);
-		    }else {
+		    } else {
 			    //Otherwise - Gracefully Fall Back If Not Supported... Probably Best Not To Use A JS Alert Though :)
 		        alert("Geolocation API is not supported in your browser.");
-		    }
+		    }	
+
+			var locationUCSD = [
+    			['Canyon Vista', 32.8839388, -117.2332095, 1],
+    			['Earls Place and Market', 32.8839388, -117.2332095, 2],
+    			['Sixth College Place and Market', 32.878941,-117.2306969, 3],
+    			['Foodworx', 32.878941,-117.2306969, 4],
+	   			['Cafe Ventanas', 32.8857478,-117.2430154, 5],
+     			['Oceanview Terrace Restaurant', 32.883108, -117.2416931, 6],
+     			['Goodys Place and Market', 32.883108, -117.2416931, 7],
+	     		['Pines', 32.8790174, -117.2415268, 8],
+     			['Muir Woods Coffee House', 32.8789093, -117.2418379, 9],
+    			['Rogers Place and Market', 32.8749209, -117.2423118, 10],
+    			['64 Degrees', 32.8748725, -117.2419578, 11],
+    			['Roots', 32.8759166, -117.2354978, 12],
+    			['The Bistro', 32.8879506, -117.2423824, 13],
+    			['The Village', 32.8872344, -117.2422322, 14],
+    			['Sunshine Market', 32.8796677, -117.2359832, 15]
+    		];
+
+
+			function setMarkers(map, locations) {
+    			for (var i = 0; i < locations.length; i++) {
+    				var dining = locations[i];
+    				var myLatLng = new google.maps.LatLng(dining[1], dining[2]);
+   					var foodLoc = new google.maps.Marker({
+        				position: myLatLng,
+       					map: map,
+        				title: dining[0],
+        				zIndex: dining[3],
+        				draggable: false,
+        				animation: google.maps.Animation.DROP
+    				});
+        		}
+   				
+   			}
 		}   
 	    
 		//Once Page Is Populated - Initiate jQuery
