Made coordinates more accurate

--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -317,21 +317,21 @@
 		    }	
 
 			var locationUCSD = [
-    			["Canyon Vista", 32.8839388, -117.2332095, 1],
-    			["Earl\'s Place and Market", 32.8839388, -117.2332095, 2],
-    			["Sixth College Place and Market", 32.878941,-117.2306969, 3],
-    			["Foodworx", 32.878941,-117.2306969, 4],
-	   			["Cafe Ventanas", 32.8857478,-117.2430154, 5],
-     			["Oceanview Terrace Restaurant", 32.883108, -117.2416931, 6],
-     			["Goody\'s Place and Market", 32.883108, -117.2416931, 7],
-	     		["Pines", 32.8790174, -117.2415268, 8],
-     			["Muir Woods Coffee House", 32.8789093, -117.2418379, 9],
-    			["Roger\'s Place and Market", 32.8749209, -117.2423118, 10],
-    			["64 Degrees", 32.8748725, -117.2419578, 11],
-    			["Roots", 32.8759166, -117.2354978, 12],
-    			["The Bistro", 32.8879506, -117.2423824, 13],
-    			["The Village", 32.8872344, -117.2422322, 14],
-    			["Sunshine Market", 32.8796677, -117.2359832, 15]
+    			["Canyon Vista", 32.884021, -117.233263, 1],
+    			["Earl\'s Place and Market", 32.883846, -117.233279, 2],
+    			["Sixth College Place and Market", 32.879132, -117.230909, 3],
+    			["Foodworx", 32.878765, -117.230438, 4],
+	   			["Cafe Ventanas", 32.886081, -117.242724, 5],
+     			["Oceanview Terrace Restaurant", 32.883107, -117.242721, 6],
+     			["Goody\'s Place and Market", 32.882903, -117.240344, 7],
+	     		["Pines", 32.879001, -117.242530, 8],
+     			["Muir Woods Coffee House", 32.878870, -117.242545, 9],
+    			["Roger\'s Place and Market", 32.874924, -117.242312, 10],
+    			["64 Degrees", 32.874728, -117.242025, 11],
+    			["Roots", 32.876085, -117.235369, 12],
+    			["The Bistro", 32.887947, -117.242044, 13],  
+    			["The Village", 32.887596, -117.242149, 14],
+    			["Sunshine Market", 32.879692, -117.236082, 15]
     		];
 
     		var infoWindow = new google.maps.InfoWindow();
