Change color of logo to white

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -42,7 +42,7 @@
   border-color: #87b822;
 }
 .navbar-default .navbar-brand {
-  color: #d4dca8;
+  color: #ffffff;
 }
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
   color: #ffffff;
