--- a/views/messages.handlebars
+++ b/views/messages.handlebars
@@ -55,7 +55,7 @@
   border-color: #87b822;
 }
 .navbar-default .navbar-brand {
-  color: #d4dca8;
+  color: #ffffff;
 }
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
   color: #ffffff;
