--- a/views/roots.handlebars
+++ b/views/roots.handlebars
@@ -45,7 +45,7 @@
   border-color: #87b822;
 }
 .navbar-default .navbar-brand {
-  color: #d4dca8;
+  color: #ffffff;
 }
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
   color: #ffffff;
