Increase font size of navbar-default to 1.05 em

--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -45,6 +45,7 @@
 .navbar-default {
 	background-color: #87b822;
 	border-color: #7ea32f;
+  font-size: 1.05em;
 }
 .navbar-default .navbar-brand {
 	color: #eff2df;
