--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -40,6 +40,7 @@
 .navbar-default {
   background-color: #87b822;
   border-color: #87b822;
+  font-size: 1.05em;
 }
 .navbar-default .navbar-brand {
   color: #ffffff;
