--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -51,6 +51,7 @@
 .navbar-default {
   background-color: #87b822;
   border-color: #87b822;
+  font-size: 1.05em;
 }
 .navbar-default .navbar-brand {
   color: #ffffff;
