Add background images

--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -16,7 +16,12 @@
     
     <style>
 
+	h1 {
+		/*-webkit-text-stroke: 1px white;*/
+	}
+
 	body {
+		background: url("images/background-1.jpg") no-repeat center center fixed; 
 		background-color: #e9f1d0;
 		font-family: 'Source Sans Pro', sans-serif;
 		font-size: 160%;
@@ -27,8 +32,13 @@
 		padding:10px 0px 0px 0px;
 	}
 
-	.jumbotron, .panel-body {
-		background-color: #e9f1d0;
+	.jumbotron, .panel-body, .panel {
+		/*background-color: #e9f1d0;*/
+		background-color: rgba(233, 241, 208, 0.5);
+	}
+
+	.form-group{
+		background-color: rgba(233, 241, 208, 0);
 	}
 	
 	.jumbotron h1 {
