Add style to header

--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -17,7 +17,7 @@
     <style>
 
 	h1 {
-		/*-webkit-text-stroke: 1px white;*/
+		text-shadow: 2px 2px 0px white; /*the shadows return!!!*/
 	}
 
 	body {
