--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -22,7 +22,6 @@
 
 	body {
 		background: url("images/background-5.jpg") no-repeat center center fixed; 
-		background-color: #e9f1d0;
 		font-family: 'Source Sans Pro', sans-serif;
 		font-size: 160%;
 	}
@@ -164,13 +163,13 @@
 				    <div class="form-group">
 				    	<h3>Register</h3>
 				    	<br/>
-				      	<label for="name">Name:</label>
+				      	<label for="name">Name</label>
 				      	<input type="text" class="form-control" id="title" name="name">
-				      	<label for="email">Email:</label>
+				      	<label for="email">Email</label>
 				     	<input type="text" class="form-control" id="content" name="email">
-				     	<label for="password">Password:</label>
+				     	<label for="password">Password</label>
 				     	<input type="text" class="form-control" id="content" name="password">
-				     	<label for="passwordconfirm">Confirm Password:</label>
+				     	<label for="passwordconfirm">Confirm Password</label>
 				     	<input type="text" class="form-control" id="content" name="passwordconfirm">
 				    </div>
 				    <input type="submit" id="submitBtn" class="btn btn-default" value="Register"></input>
