Make mongoDB's app.js and initPostsDB.js work

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -285,7 +285,7 @@
     			</div>
     			<div class="comments" style="display:none;">
     				<br/>
-    				{{comments}}
+    				<!-- {{comments}} -->
     				<form id="addFriendForm" role="form" method="get" action="/addcomment">
 				    <div class="form-group">
 				      	<input type="text" class="form-control" id="title" placeholder="Add comment..." name="title">
