Add mongoDB code and improve design

--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -51,9 +51,10 @@
 .navbar-default {
   background-color: #87b822;
   border-color: #87b822;
+  font-size: 1.05em;
 }
 .navbar-default .navbar-brand {
-  color: #d4dca8;
+  color: #ffffff;
 }
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
   color: #ffffff;
@@ -128,8 +129,8 @@
         <ul class="nav navbar-nav navbar-right">
           <li > <a href="index" > Home </a></li>
           <li > <a href="foodfinder" > Food Finder </a></li>
-          <li > <a href="messages"> Messages </a></li>
-          <li class="active"> <a href="profile" >Profile </a></li>
+          <li > <a href="profile"> Profile </a></li>
+          <li class="active"> <a href="help" > Help </a></li>
           <li> <a href="/" > Log Out </a></li>
         </ul>
       </div>
@@ -141,10 +142,21 @@
     </br>
     </br>
   </div>
-  <h1>Help Page</h1>
-  <p>This is a food-finding tool to help you find the nutrients you need if you have allergies. It is mainly for students who live on-campus at UC San Diego.</p>
+  
+  <div class="container">
+  <div class="jumbotron">
+
+  <h1>nuTriton Help Page</h1>
   <br>
-  <p>The Home page is for posting any reviews, recipes, advice, or questions. The Food Finder gives you a list of foods in each dining hall that are vegetarian, vegan, or gluten-friendly; there is also a display of each food's upvotes and downvotes. Since this is a network of people who may share similar diets as you, you can message other users to further conversate about any questions or suggestions based on the posts made. Your profile page contains a list of your posts as well as your favorites. Hope you enjoy fueling your taste buds! </p>
+  <h4>This is a food-finding tool to help you find the nutrients you need if you have food restrictions. It is mainly for students who live on-campus at UC San Diego.</h4>
+  <br>
+  <h4>The Home page is for posting any information, reviews, recipes, advice, or questions. </h4>
+  <h4>The Food Finder gives you a list of foods in each dining hall that are vegetarian, vegan, or gluten-friendly; there is also a display of each food's upvotes and downvotes.</h4>
+  <h4>Your profile page contains a list of your posts as well as your favorites. </h4>
+  <br/>
+  <h4> Hope you enjoy fueling your taste buds! </h4>
+  </div>
+  </div>
       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
