--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -161,30 +161,11 @@
 			</div>
 
 			<div class="collapse navbar-collapse">
-				<!-- <ul class="nav navbar-nav">
-					<li> <a href="/" > <span class="glyphicon glyphicon-home"></span>  HOME </a></li>
-					<li class="active"> <a href="foodfinder" > <span class="glyphicon glyphicon-cutlery"></span> FOOD FINDER </a></li>
-				</ul> -->
-				
-				<!-- <form class="navbar-form navbar-left" role="search">
-        			<div class="form-group">
-          				<input type="text" class="form-control" placeholder="Search">
-        			</div>
-      			</form> -->
-<!-- 
-				<ul class="nav navbar-nav navbar-right">
-					<li> <a href="/" > <span class="glyphicon glyphicon-home"></span>  HOME </a></li>
-					<li class="active"> <a href="foodfinder" > <span class="glyphicon glyphicon-cutlery"></span> FOOD FINDER </a></li>
-					<li> <a href="messages"><span class="glyphicon glyphicon-envelope"></span> MESSAGES </a></li>
-					<li> <a href="profile" ><span class="glyphicon glyphicon-user"></span> PROFILE </a></li>
-					<li> <a href="" > Log Out </a></li>
-				</ul> -->
-
 				<ul class="nav navbar-nav navbar-right">
 					<li> <a href="index" > Home </a></li>
 					<li class="active"> <a href="foodfinder" > Food Finder </a></li>
-					<li> <a href="messages"> Messages </a></li>
 					<li> <a href="profile" >Profile </a></li>
+					<li> <a href="help"> Help </a></li>
 					<li> <a href="/" > Log Out </a></li>
 				</ul>
 			</div>
