--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -97,67 +97,6 @@
     background-color: #87b822;
   }
 }
-
-/*.navbar-default {
-	background-color: #87b822;
-	border-color: #7ea32f;
-}
-.navbar-default .navbar-brand {
-	color: #eff2df;
-}
-.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
-	color: #eff2df;
-}
-.navbar-default .navbar-text {
-	color: #eff2df;
-}
-.navbar-default .navbar-nav > li > a {
-	color: #eff2df;
-}
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-	color: #eff2df;
-}
-.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-	color: #eff2df;
-	background-color: #7ea32f;
-	box-shadow: inset 0px 5px 20px -15px #536b20;
-}
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-	color: #eff2df;
-	background-color: #7ea32f;
-}
-.navbar-default .navbar-toggle {
-	border-color: #7ea32f;
-}
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-	background-color: #7ea32f;
-}
-.navbar-default .navbar-toggle .icon-bar {
-	background-color: #eff2df;
-}
-.navbar-default .navbar-collapse,
-.navbar-default .navbar-form {
-	border-color: #eff2df;
-}
-.navbar-default .navbar-link {
-	color: #eff2df;
-}
-.navbar-default .navbar-link:hover {
-	color: #eff2df;
-}
-
-@media (max-width: 767px) {
-	.navbar-default .navbar-nav .open .dropdown-menu > li > a {
-		color: #eff2df;
-	}
-	.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-		color: #eff2df;
-	}
-	.navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-		color: #eff2df;
-		background-color: #7ea32f;
-	}
-}*/
     </style>
 
   </head>
@@ -178,28 +117,11 @@
 			</div>
 
 			<div class="collapse navbar-collapse">
-				<!-- <ul class="nav navbar-nav">
-					<li class="active"> <a href="/" > <span class="glyphicon glyphicon-home"></span>  Home </a></li>
-					<li> <a href="foodfinder" > <span class="glyphicon glyphicon-cutlery"></span> Food Finder </a></li>
-				</ul> -->
-
-				<!-- <form class="navbar-form navbar-left" role="search">
-        			<div class="form-group">
-          				<input type="text" class="form-control" placeholder="Search">
-        			</div>
-      			</form> -->
-
-			<!-- 	<ul class="nav navbar-nav navbar-right">
-					<li> <a href="messages"><span class="glyphicon glyphicon-envelope"></span> Messages </a></li>	
-					<li> <a href="profile" ><span class="glyphicon glyphicon-user"></span> Profile </a></li>
-					<li> <a href="" > Log Out </a></li>
-				</ul> -->
-
 				<ul class="nav navbar-nav navbar-right">
 					<li class="active"> <a href="index" > Home </a></li>
 					<li > <a href="foodfinder" > Food Finder </a></li>
-					<li> <a href="messages"> Messages </a></li>
 					<li> <a href="profile" >Profile </a></li>
+					<li> <a href="help"> Help </a></li>
 					<li> <a href="/" > Log Out </a></li>
 				</ul>
 			</div>
@@ -243,28 +165,6 @@
   			</div>
 		</div> -->
 
-
-		<!-- <div class="panel panel-default ">
- 			<div class="panel-body">
- 			<h3 >Vegan Snack Recipe<br/><br/></h3>
-
- 				<div class="row">
-
-		  		<div class="col-xs-6 col-md-3">
-		    	<a href="https://c2.staticflickr.com/8/7163/6750034613_2806e59dff_b.jpg" data-lightbox="image-2" class="thumbnail">
-		    	<img src="https://c2.staticflickr.com/8/7163/6750034613_2806e59dff_b.jpg"/>
-		    	</a>
-		  		</div>
-
-		  		<div class="col-xs-6 col-md-3">
-		   		 <a href="https://c1.staticflickr.com/3/2759/4218998081_ef0de9fbc9_z.jpg?zz=1" data-lightbox="image-2" class="thumbnail">
-		      	<img src="https://c1.staticflickr.com/3/2759/4218998081_ef0de9fbc9_z.jpg?zz=1"/>
-		    	</a>
-		  		</div>
-				</div>
-
-  			</div>
-		</div> -->
         <button type="button" class="btn btn-default pull-right"><a href="#bottom"><span class="glyphicon glyphicon-plus"></span> New Post</a></button>
         <br/>
         <br/>
@@ -273,7 +173,7 @@
 		{{#each posts}}
 		<div class="panel panel-default ">
 			<div class="panel-body">
- 				<div class="posts">
+ 				<div class="post" id="post{{id}}">
         		<h3>{{title}}</h3>
         		<br/>
         		<p>{{content}}</p>
@@ -299,19 +199,17 @@
     	
     	<div class="panel panel-default ">
 			<div class="panel-body">
-
-			    <form id="addFriendForm" role="form" method="get" action="/add">
+			    <form id="new-post-form" role="form" method="get" action="/add">
 				    <div class="form-group">
 				    	<h3>Create New Post</h3>
 				    	<br/>
-
 				      	<label for="title">Title:</label>
 				      	<input type="text" class="form-control" id="title" placeholder="Title" name="title">
 				      	<label for="content">Content:</label>
 				     	<input type="text" class="form-control" id="content" placeholder="Content" name="content">
 				    </div>
 				   	<a name="bottom">
-				    <input type="submit" id="submitBtn" class="btn btn-default" value="Post"></input>
+				    <button type="button" id="newPostSubmitBtn" class="btn btn-default">Post</button>
 				</form>
 			</div>
 		</div>
@@ -333,6 +231,18 @@
 		$(".comments").toggle();
 	});
 
+	$('#newPostSubmitButton').click(function(e) {
+		console.log('clicked');
+		var title = $('#new-post-form #title').val();
+		var content = $('#new-post-form #content').val();
+		var json = {
+			'post_title': title,
+			'content': content
+		};
+		$.post('/index/post/new', json, function() {
+			window.location.href = '/index'; // reload the page
+		});
+	});
 
 	</script>
 	
