--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -249,6 +249,48 @@
   				<h3><a href="roots">Roots</a></h3>
   			</div>
   		</div>
+
+  		<div class="panel panel-default ">
+  			<div class="panel-body">
+  				<h3><a href="bistro">The Bistro</a></h3>
+  			</div>
+  		</div>
+
+  		<div class="panel panel-default ">
+  			<div class="panel-body">
+  				<h3><a href="cafev">Cafe Ventanas</a></h3>
+  			</div>
+  		</div>
+
+  		<div class="panel panel-default ">
+  			<div class="panel-body">
+  				<h3><a href="clubmed">Club Med</a></h3>
+  			</div>
+  		</div>
+
+  		<div class="panel panel-default ">
+  			<div class="panel-body">
+  				<h3><a href="foodworx">Foodworx</a></h3>
+  			</div>
+  		</div>
+
+  		<div class="panel panel-default ">
+  			<div class="panel-body">
+  				<h3><a href="goodys">Goody's Place and Market</a></h3>
+  			</div>
+  		</div>
+
+  		<div class="panel panel-default ">
+  			<div class="panel-body">
+  				<h3><a href="ovt">Oceanview Terrace</a></h3>
+  			</div>
+  		</div>
+
+  		<div class="panel panel-default ">
+  			<div class="panel-body">
+  				<h3><a href="sixtyfourdegrees">64 Degrees</a></h3>
+  			</div>
+  		</div>
 	</div>
 
 
