--- a/views/foodworx.handlebars
+++ b/views/foodworx.handlebars
@@ -164,10 +164,10 @@
 	<div class="container">
 		<div class="panel panel-default ">
   			<div class="panel-body">
-  				<h3>Cafe V</h3>
+  				<h3>Bistro</h3>
 	  				<br/>
-		  			{{#each cafevData.cafevposts}}
-		 			<div class="cafevposts">
+		  			{{#each foodworxData.foodworxposts}}
+		 			<div class="foodworxposts">
 		        		<h4>
 		    			{{name}}  ({{type}})
 		    			<br/>
@@ -178,7 +178,7 @@
 		    		{{/each}}
 		    		<br/>
 
-				    <form id="addcafevForm" role="form" method="get" action="/addcafev">
+				    <form id="addfoodworxForm" role="form" method="get" action="/addfoodworx">
 					    <h4><strong>Add Menu</strong></h4>
 					    <div class="form-group form-inline">
 					      	<label for="name">Name:</label>
