Improve dining/market data

--- a/views/roots.handlebars
+++ b/views/roots.handlebars
@@ -43,6 +43,7 @@
 .navbar-default {
   background-color: #87b822;
   border-color: #87b822;
+  font-size: 1.1em;
 }
 .navbar-default .navbar-brand {
   color: #ffffff;
@@ -98,48 +99,7 @@
     color: #ffffff;
     background-color: #87b822;
   }
-}
-	/* Responsive embed CSS for Google Maps */
-/*    .google-maps {
-        position: relative;
-        padding-bottom: 75%; // This is the aspect ratio
-        height: 0;
-        overflow: hidden;
-    }
-    .google-maps iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100% !important;
-        height: 100% !important;
-    }*/
-
-	/* Responsive embed CSS for Google Maps */
-	#mapContainer {
-	    height: 500px;
-	    width: 100%;
-	}
-
-	@media only screen and (min-width: 768px) and (max-width: 959px) {
-		#mapContainer {
-		    height: 500px;
-	    	width: 100%;
-		}
-	}	
-		
-	@media only screen and (max-width: 767px) {
-		#mapContainer {
-		    height: 260px;
-	    	width: 100%;
-		}
-	}	
-
-	@media only screen and (min-width: 480px) and (max-width: 767px) {
-		#mapContainer {
-		    height: 400px;
-	    	width: 100%;
-		}
-	}	
+}	
 
     </style>
 
