Fix bug with food finder data access

--- a/views/foodworx.handlebars
+++ b/views/foodworx.handlebars
@@ -124,7 +124,7 @@
 	<div class="container">
 		<div class="panel panel-default ">
   			<div class="panel-body">
-  				<h3>Bistro</h3>
+  				<h3>Foodworx</h3>
 	  				<br/>
 		  			{{#each foodworxData.foodworxposts}}
 		 			<div class="foodworxposts">
