Fix new post upvote/downvote bug

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -200,7 +200,7 @@
 				</form>
     			</div> -->
 
-    	<div class="panel panel-default post" id="post{{id}}">
+    	<div class="panel panel-default">
 			<div class="panel-body">
 			    <form id="new-post-form" role="form" method="get" action="/add">
 				    <div class="form-group">
