Add posts that cannot be deleted by user in homepage

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -134,12 +134,6 @@
 	</div>
 
 	<div class="container">
-		<!-- <div class="jumbotron">
- 		 <h1>Welcome to nuTriton!</h1>
- 		 <p>This is the place where you can find foods suitable for your diets and allergies.</p>
-		</div>
- 		-->
-
 		<!-- PANEL -->
 	<!-- 	<div class="panel panel-default ">
 
@@ -169,6 +163,35 @@
         <br/>
         <br/>
 
+		<div class="panel panel-default ">
+			<div class="panel-body">
+ 				<div class="post">				
+        		<h3>Thoughts on Glutino Snack</h3>
+        		<br/>
+        		<p>Glutino, as the name suggests, is a gluten-free snack. I first tried this in Earl's Place and Market, and this has been my go to snack ever since. This snack fits my needs well, because it has the right amount of nutrition, which is good for a snack on the go. It also tastes good, although it might not be suitable for supertasters. Overall I would recommend this snack for people with gluten-free diets.</p>
+        		<br/>
+        		<button type="button" class="upvote btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 31</button>
+    			<button type="button" class="downvote btn btn-default"><span class="glyphicon glyphicon-thumbs-down"></span> 2</button>
+				<button type="button" class="btn btn-default favorite pull-right"><span class="glyphicon glyphicon-star-empty"></span></button>
+    			</div>
+    		</div>
+    	</div>
+
+
+		<div class="panel panel-default ">
+			<div class="panel-body">
+ 				<div class="post">				
+        		<h3>New Vegan Products at The Market</h3>
+        		<br/>
+        		<p>The Market now carries several new vegan products, namely Veganaise, Amy's Entrees, Gardien Sandwiches and a variety of fresh produce. They have been the place on campus with the leading selection of vegan products, and these new additions make them even more vegan-friendly. If you have time, do check out the new products.
+        		</p>
+        		<br/>
+        		<button type="button" class="upvote btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 31</button>
+    			<button type="button" class="downvote btn btn-default"><span class="glyphicon glyphicon-thumbs-down"></span> 2</button>
+				<button type="button" class="btn btn-default favorite pull-right"><span class="glyphicon glyphicon-star-empty"></span></button>
+    			</div>
+    		</div>
+    	</div>
 
 		{{#each posts}}
 		<div class="panel panel-default ">
