Edit homepage posts

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -171,7 +171,7 @@
         		<p>Glutino, as the name suggests, is a gluten-free snack. I first tried this in Earl's Place and Market, and this has been my go to snack ever since. This snack fits my needs well, because it has the right amount of nutrition, which is good for a snack on the go. It also tastes good, although it might not be suitable for supertasters. Overall I would recommend this snack for people with gluten-free diets.</p>
         		<br/>
         		<button type="button" class="upvote btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 31</button>
-    			<button type="button" class="downvote btn btn-default"><span class="glyphicon glyphicon-thumbs-down"></span> 2</button>
+    			<button type="button" class="downvote btn btn-default"><span class="glyphicon glyphicon-thumbs-down"></span> 3</button>
 				<button type="button" class="btn btn-default favorite pull-right"><span class="glyphicon glyphicon-star-empty"></span></button>
     			</div>
     		</div>
@@ -183,10 +183,10 @@
  				<div class="post">				
         		<h3>New Vegan Products at The Market</h3>
         		<br/>
-        		<p>The Market now carries several new vegan products, namely Veganaise, Amy's Entrees, Gardien Sandwiches and a variety of fresh produce. They have been the place on campus with the leading selection of vegan products, and these new additions make them even more vegan-friendly. If you have time, do check out the new products.
+        		<p>The Market now carries several new vegan products, namely Veganaise, Amy's Entrees, Gardien Sandwiches and a variety of fresh produce. They have been the place on campus with the leading selection of vegan products, and these new additions make them even more vegan-friendly. With these additions The Market carries over ten different types of vegan products. If you have time, do check out the new products.
         		</p>
         		<br/>
-        		<button type="button" class="upvote btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 31</button>
+        		<button type="button" class="upvote btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 25</button>
     			<button type="button" class="downvote btn btn-default"><span class="glyphicon glyphicon-thumbs-down"></span> 2</button>
 				<button type="button" class="btn btn-default favorite pull-right"><span class="glyphicon glyphicon-star-empty"></span></button>
     			</div>
