Add market information and location

--- a/views/bistro.handlebars
+++ b/views/bistro.handlebars
@@ -125,6 +125,7 @@
 		<div class="panel panel-default ">
   			<div class="panel-body">
   				<h3>Bistro</h3>
+  				<h4>Location: The Village East</h4>
 	  				<br/>
 		  			{{#each bistroData.bistroposts}}
 		 			<div class="bistroposts">
