--- a/views/cafev.handlebars
+++ b/views/cafev.handlebars
@@ -125,6 +125,7 @@
 		<div class="panel panel-default ">
   			<div class="panel-body">
   				<h3>Cafe Ventanas</h3>
+  				<h4>Location: ERC</h4>
 	  				<br/>
 		  			{{#each cafevData.cafevposts}}
 		 			<div class="cafevposts">
