--- a/views/canyonvista.handlebars
+++ b/views/canyonvista.handlebars
@@ -125,6 +125,7 @@
 		<div class="panel panel-default ">
   			<div class="panel-body">
   				<h3>Canyon Vista </h3>
+  				<h4>Location: Warren</h4>
 	  				<br/>
 		  			{{#each canyonData.canyonvistaposts}}
 		 			<div class="canyonvistaposts">
