--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -232,6 +232,12 @@
 			<button type="button" id="upvote" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 45 </button>
   			</div> -->
 		
+    <div class="panel panel-default ">
+        <div class="panel-body">
+          <h3><a href="market">All Markets</a></h3>
+        </div>
+    </div>
+
 		<div class="panel panel-default ">
   			<div class="panel-body">
   				<h3><a href="canyonvista">Canyon Vista </a></h3>
