--- a/views/foodworx.handlebars
+++ b/views/foodworx.handlebars
@@ -125,7 +125,8 @@
 		<div class="panel panel-default ">
   			<div class="panel-body">
   				<h3>Foodworx</h3>
-	  				<br/>
+	  			<h4>Location: Sixth</h4>
+					<br/>
 		  			{{#each foodworxData.foodworxposts}}
 		 			<div class="foodworxposts">
 		        		<h4>
