--- a/views/goodys.handlebars
+++ b/views/goodys.handlebars
@@ -125,6 +125,7 @@
 		<div class="panel panel-default ">
   			<div class="panel-body">
   				<h3>Goody's Place and Market</h3>
+  				<h4>Location: Marshall</h4>
 	  				<br/>
 		  			{{#each goodysData.goodysposts}}
 		 			<div class="goodysposts">
