--- a/views/ovt.handlebars
+++ b/views/ovt.handlebars
@@ -125,6 +125,7 @@
 		<div class="panel panel-default ">
   			<div class="panel-body">
   				<h3>Oceanview Terrace</h3>
+  				<h4>Location: Marshall</h4>
 	  				<br/>
 		  			{{#each ovtData.ovtposts}}
 		 			<div class="ovtposts">
