--- a/views/roots.handlebars
+++ b/views/roots.handlebars
@@ -125,7 +125,8 @@
 		<div class="panel panel-default ">
   			<div class="panel-body">
   				<h3>Roots</h3>
-	  				<br/>
+	  			<h4>Location: Muir</h4>
+					<br/>
 		  			{{#each rootsData.rootsposts}}
 		 			<div class="rootsposts">
 		        		<h4>
