--- a/views/sixtyfourdegrees.handlebars
+++ b/views/sixtyfourdegrees.handlebars
@@ -126,6 +126,7 @@
 		<div class="panel panel-default ">
   			<div class="panel-body">
   				<h3>64 Degrees</h3>
+  				<h4>Location: Revelle</h4>
 	  				<br/>
 		  			{{#each sixtyfourdegreesData.sixtyfourdegreesposts}}
 		 			<div class="sixtyfourdegreesposts">
